--- a/Demo/ScrollableSegmentedControlDemo/ScrollableSegmentedControlDemo/Base.lproj/Main.storyboard
+++ b/Demo/ScrollableSegmentedControlDemo/ScrollableSegmentedControlDemo/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -195,6 +196,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oYm-qx-rgw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="364" y="126.38680659670166"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="5OF-Y3-KKO">
+            <objects>
+                <viewController id="UZP-lf-Owg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="f4u-W3-Fr4"/>
+                        <viewControllerLayoutGuide type="bottom" id="TyJ-FO-EM8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5IM-De-JSd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nIf-Jo-olj">
+                                <rect key="frame" x="16" y="76" width="343" height="68"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nt3-Bp-FeH">
+                                        <rect key="frame" x="121.5" y="9" width="100" height="50"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EhJ-iM-9EU">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="f6G-MN-24v"/>
+                                                    <constraint firstAttribute="height" constant="50" id="iZe-88-S1D"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h6-r1-Fwx">
+                                                <rect key="frame" x="58" y="0.0" width="42" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nt3-Bp-FeH" secondAttribute="trailing" constant="8" id="7BU-vy-Gak"/>
+                                    <constraint firstItem="nt3-Bp-FeH" firstAttribute="centerX" secondItem="nIf-Jo-olj" secondAttribute="centerX" id="aZN-Ln-4dN"/>
+                                    <constraint firstItem="nt3-Bp-FeH" firstAttribute="centerY" secondItem="nIf-Jo-olj" secondAttribute="centerY" id="lm6-02-NSc"/>
+                                    <constraint firstAttribute="height" constant="68" id="myJ-be-7yu"/>
+                                    <constraint firstItem="nt3-Bp-FeH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nIf-Jo-olj" secondAttribute="leading" constant="8" id="ntC-UO-7Ml"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nIf-Jo-olj" firstAttribute="leading" secondItem="5IM-De-JSd" secondAttribute="leadingMargin" id="OCt-hO-kHz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nIf-Jo-olj" secondAttribute="trailing" id="mNn-dg-8TR"/>
+                            <constraint firstItem="nIf-Jo-olj" firstAttribute="top" secondItem="f4u-W3-Fr4" secondAttribute="bottom" constant="56" id="vi5-3V-nqv"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="End-xz-DsS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1088.8" y="183.95802098950526"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pMb-hx-yM5">
