--- a/Demo/ScrollableSegmentedControlDemo/ScrollableSegmentedControlDemo/Base.lproj/Main.storyboard
+++ b/Demo/ScrollableSegmentedControlDemo/ScrollableSegmentedControlDemo/Base.lproj/Main.storyboard
@@ -212,18 +212,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nIf-Jo-olj">
                                 <rect key="frame" x="16" y="76" width="343" height="68"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nt3-Bp-FeH">
-                                        <rect key="frame" x="121.5" y="9" width="100" height="50"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nt3-Bp-FeH">
+                                        <rect key="frame" x="147" y="0.0" width="50" height="68"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EhJ-iM-9EU">
-                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="f6G-MN-24v"/>
-                                                    <constraint firstAttribute="height" constant="50" id="iZe-88-S1D"/>
-                                                </constraints>
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="39.5"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h6-r1-Fwx">
-                                                <rect key="frame" x="58" y="0.0" width="42" height="50"/>
+                                                <rect key="frame" x="0.0" y="47.5" width="50" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -234,6 +230,7 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nt3-Bp-FeH" secondAttribute="trailing" constant="8" id="7BU-vy-Gak"/>
+                                    <constraint firstItem="nt3-Bp-FeH" firstAttribute="top" secondItem="nIf-Jo-olj" secondAttribute="top" id="Blk-oV-AuB"/>
                                     <constraint firstItem="nt3-Bp-FeH" firstAttribute="centerX" secondItem="nIf-Jo-olj" secondAttribute="centerX" id="aZN-Ln-4dN"/>
                                     <constraint firstItem="nt3-Bp-FeH" firstAttribute="centerY" secondItem="nIf-Jo-olj" secondAttribute="centerY" id="lm6-02-NSc"/>
                                     <constraint firstAttribute="height" constant="68" id="myJ-be-7yu"/>
